# rust-2d-engine

./: ._target  .gitignore  AGENTS.md  ARCHITECTURE.html  CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  REFERENCE.html  REFERENCE.md  ROADMAP.md
.github/workflows/: ci.yml
docs/: AGENT_WORKFLOW.md  CHANGELOG.md  ENGINE_FOLLOWUPS_IMPLEMENTATION.md  ENGINE_TERMS_FOR_BEGINNERS.md  ENTITY_GENERATION_V2_PLAN.md  HANDOFF.md  NEXT_WORK.md  PATTERNS.md  PROJECT_SCAN_REPORT.md  ROADMAP.md  RUST_SURVIVORS_TEXTURE_CACHE_KEY_PROMPT.md  RUST_SURVIVORS_UV_MIGRATION_PROMPT.md  SECURITY_HARDENING_2026_05.md  SKELETAL.md  TEXTURE_CACHE_KEY_FIX.md  UV_ORIENTATION_FIX_REQUEST.md  VISION.md
examples/: basic.rs  gpu_particles.rs  loading_bar.rs  minimap.rs  mp_client.rs  mp_server.rs  runtime_policies.rs  skeletal_puppet.rs  split_screen.rs  touch_demo.rs
examples/games/maze_escape/: maze_escape.rs
examples/games/platformer/: platformer.rs
examples/games/scene_flow/: scene_flow.rs
examples/games/sokoban/: sokoban.rs
examples/wasm/: build.sh  index.html
plans/handoffs/: HANDOFF_maze-escape-example-game_2026-05-31.md  HANDOFF_platformer-example-game_2026-05-30.md  HANDOFF_scene-flow-ui-interaction_2026-05-31.md  HANDOFF_scene-flow-ui-interaction_engine-ui-fixes_2026-05-31.md  HANDOFF_sokoban-example-game_2026-05-31.md  PLAN_sokoban-example-game_2026-05-31.md
scripts/: build_wasm.sh
src/: animation.rs  app.rs  asset.rs  atlas.rs  audio.rs  behavior.rs  camera.rs  components.rs  debug_ui.rs  gpu_particle.rs  hierarchy.rs  history.rs  input.rs  lib.rs  locale.rs  material.rs  network.rs  particle.rs  pathfinding.rs  pool.rs  prefab.rs  reflect.rs  resources.rs  save.rs  scene.rs  scripting.rs  skeletal.rs  steering.rs  tilemap.rs  timeline.rs  timer.rs  tween.rs
src/animation/: blend_system.rs  blend_tree.rs  mod.rs  player.rs  state_machine.rs  system.rs
src/collision/: debug.rs  grid.rs  mod.rs  query.rs
src/ecs/: commands.rs  events.rs  mod.rs  schedule.rs  system.rs  world.rs
src/input/: gamepad.rs  map.rs  mod.rs  state.rs  touch.rs
src/physics/: body.rs  character.rs  events.rs  mod.rs  system.rs  world.rs
src/renderer/: ._context.rs  context.rs  fade.rs  gpu_particle.rs  lighting.rs  mod.rs  post_process.rs  render_target.rs  sprite.rs  text.rs  texture.rs  ui.rs
src/renderer/shaders/: gpu_particle_compute.wgsl  gpu_particle_render.wgsl  post_process.wgsl  sprite.wgsl
src/ui/: button.rs  checkbox.rs  joystick.rs  label.rs  mod.rs  node.rs  panel.rs  scroll_view.rs  slider.rs  system.rs  text_input.rs
