[package]
name        = "skeleton-engine"
version     = "1.0.0"
edition     = "2021"
description = "Lightweight 2D game engine — wgpu rendering, custom ECS, rapier2d physics"
repository  = "https://github.com/ChunSam/rust-2d-engine"
homepage    = "https://github.com/ChunSam/rust-2d-engine"
documentation = "https://docs.rs/skeleton-engine"
readme      = "README.md"
license     = "MIT"
keywords    = ["game", "engine", "wgpu", "ecs", "2d"]
categories  = ["game-engines", "rendering", "wasm"]
rust-version = "1.88"
include     = [
    ".cargo/config.toml",
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
    "REFERENCE.md",
    "Cargo.toml",
    "Cargo.lock",
    "examples/*.rs",
    "examples/wasm/build.sh",
    "examples/wasm/index.html",
    "scripts/**",
    "src/**",
]

[lib]
name = "engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
winit    = "0.30"
wgpu     = { version = "22", features = ["webgl"] }
glam     = { version = "0.28", features = ["serde"] }
bytemuck = { version = "1", features = ["derive"] }
image    = { version = "0.25", default-features = false, features = ["png"] }
log      = "0.4"
pollster = "0.3"
rand     = "0.8"
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
ron      = "0.8"
chacha20poly1305 = "0.10"
glyphon  = "0.6"
egui        = "0.29"
egui-wgpu   = "0.29"
egui-winit  = { version = "0.29", default-features = false }
rhai        = { version = "1", features = ["sync"] }

# ── 네이티브 전용 (OS API 의존) ──────────────────────────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rapier2d    = { version = "0.22", features = ["default"] }
rodio       = { version = "0.19", default-features = false, features = ["wav", "vorbis"] }
dirs        = "5"
gilrs       = "0.10"
notify      = "6"
tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
rayon       = "1"

# ── WASM 전용 ────────────────────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen          = "0.2"
wasm-bindgen-futures  = "0.4"
js-sys                = "0.3"
web-sys               = { version = "0.3", features = [
    "Window", "Performance", "HtmlCanvasElement", "Document", "Element",
    "WebSocket", "MessageEvent", "CloseEvent", "BinaryType",
    "Response", "Headers",
] }
console_error_panic_hook = "0.1"
getrandom             = { version = "0.2", features = ["js"] }
web-time              = "1"
# getrandom 0.3 (wgpu 등 전이 의존성) — wasm_js 백엔드 명시
getrandom3            = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

# ── wasm-pack 설정 ────────────────────────────────────────────────────────────
# macOS ._<file> 메타데이터 파일 오인식 문제로 wasm-opt 비활성화.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

# ── 릴리즈 빌드 최적화 ────────────────────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"

# wasm 릴리즈: LTO + panic=abort 으로 바이너리 크기 최소화
[profile.release-wasm]
inherits      = "release"
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = "symbols"
panic         = "abort"
